# run-my-rust

./: Cargo.toml  README.md  config.example.toml
src/: config.rs  main.rs  play.rs
