[package]
name = "run_my_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-gateway = "0.10.1"
twilight-cache-inmemory = { version = "0.10.1", features = ["permission-calculator"] }
twilight-http = "0.10.1"
twilight-model = "0.10.1"
twilight-util = { version = "0.10", features = ["full"] }
futures-util = "0.3.21"
tokio = { version = "1.17.0", default-features = false, features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1.31"
tracing-subscriber = "0.3.9"
serde = { version = "1.0.136", features = ["derive"] }
serde_repr = "0.1.7"
serde_json = { version = "1.0.30", features = ["raw_value"] }
# reqwest = { version = "0.11.9", features = ["json"] }
hyper = { version = "0.14.18", features = ["server", "client", "runtime", "http2"]}
hyper-tls = "0.5.0"
dotenv = "0.15.0"
futures = { version = "0.3.21", default-features = false, features = ["std"] }
toml = "0.5"
once_cell = "1.10.0"